# ssg

./: .gitignore  README.md  make  pyproject.toml
data/: screen.css
posts/: 2023-07-15_example.md  index.md
src/: conf.py  main.py  post.py  utils.py
