[tool.poetry]
name = "flatflat"
version = "0.1.0"
description = "Static site generator without hierarchy"
authors = ["Maya Friedrichs <_@maya.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
